--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     data="./assets/icons/logo.svg"
                     type="image/svg+xml"
                   ></object>
-                  <span>ULTIMA®</span>
+                  ULTIMA<sup>®</sup>
                 </a>
 
                 <button class="language-button">RU</button>
@@ -243,7 +243,12 @@
                 </div>
 
                 <div class="card__footer">
-                  <p class="card__footer-description" data-i18n="launch in 7 day">Запуск за 7 дней</p>
+                  <p
+                    class="card__footer-description"
+                    data-i18n="launch in 7 days"
+                  >
+                    Запуск за 7 дней
+                  </p>
                   <button
                     class="card__footer-button button primary"
                     onclick="scrollToBlock(event, 'footer')"
@@ -274,8 +279,13 @@
 
                 <div class="card__header">
                   <div class="card__advantages">
-                    <div class="card__advantage" data-i18n="white-label">White Label</div>
-                    <p class="card__header-description" data-i18n="cryptocurrency Exchange with Intuitive UX">
+                    <div class="card__advantage" data-i18n="white-label">
+                      White Label
+                    </div>
+                    <p
+                      class="card__header-description"
+                      data-i18n="cryptocurrency Exchange with Intuitive UX"
+                    >
                       Обмен криптовалют с интуитивным UX
                     </p>
                   </div>
@@ -285,29 +295,52 @@
                   <h4 class="card__title">Crypto Exchange (Web + Tg-Bot)</h4>
 
                   <ul class="card__parameters">
-                    <li class="card__parameter" data-i18n="instant course calculation via calculator">
+                    <li
+                      class="card__parameter"
+                      data-i18n="instant course calculation via calculator"
+                    >
                       Мгновенный расчет курса через калькулятор
                     </li>
-                    <li class="card__parameter" data-i18n="telegram bot with the registration of applications in the chat">
+                    <li
+                      class="card__parameter"
+                      data-i18n="telegram bot with the registration of applications in the chat"
+                    >
                       Telegram-бот с оформлением заявок в чате
                     </li>
-                    <li class="card__parameter" data-i18n="automatic or semi-automatic processing">
+                    <li
+                      class="card__parameter"
+                      data-i18n="automatic or semi-automatic processing"
+                    >
                       Автоматическая или полуавтоматическая обработка
                     </li>
-                    <li class="card__parameter" data-i18n="email, Telegram, and push notifications">
+                    <li
+                      class="card__parameter"
+                      data-i18n="email, Telegram, and push notifications"
+                    >
                       Уведомления на email, Telegram, push
                     </li>
-                    <li class="card__parameter" data-i18n="multicurrency and custom directions">
+                    <li
+                      class="card__parameter"
+                      data-i18n="multicurrency and custom directions"
+                    >
                       Мультивалютность и кастомные направления
                     </li>
-                    <li class="card__parameter" data-i18n="integration with the crypto Wallet API">
+                    <li
+                      class="card__parameter"
+                      data-i18n="integration with the crypto Wallet API"
+                    >
                       Интеграция с API криптокошельков
                     </li>
                   </ul>
                 </div>
 
                 <div class="card__footer">
-                  <p class="card__footer-description" data-i18n="launch in 7 days">Запуск за 7 дней</p>
+                  <p
+                    class="card__footer-description"
+                    data-i18n="launch in 7 days"
+                  >
+                    Запуск за 7 дней
+                  </p>
                   <button
                     class="card__footer-button button primary"
                     onclick="scrollToBlock(event, 'footer')"
@@ -332,7 +365,9 @@
 
                 <div class="card__header">
                   <div class="card__advantages">
-                    <div class="card__advantage" data-i18n="custom development">РАЗРАБОТКА НА ЗАКАЗ</div>
+                    <div class="card__advantage" data-i18n="custom development">
+                      РАЗРАБОТКА НА ЗАКАЗ
+                    </div>
                   </div>
                 </div>
 
@@ -344,7 +379,10 @@
                 </div>
 
                 <div class="card__footer">
-                  <p class="card__footer-description--small" data-i18n="focus on business, and we'll take care of all the technical stuff">
+                  <p
+                    class="card__footer-description--small"
+                    data-i18n="focus on business, and we'll take care of all the technical stuff"
+                  >
                     Сфокусируйтесь на бизнесе, а мы возьмем на себя всё
                     техническое
                   </p>
@@ -365,13 +403,15 @@
           <div class="container">
             <div class="footer__inner">
               <div class="footer__content">
-                <h2 class="footer__title" data-i18n="footer-title">Остались вопросы или хотите демо?</h2>
+                <h2 class="footer__title" data-i18n="footer-title">
+                  Остались вопросы или хотите демо?
+                </h2>
                 <p class="footer__description" data-i18n="footer-description">
                   Свяжитесь с нами — мы подскажем, покажем и запустим ваш
                   продукт
                 </p>
-                <a class="footer__tg" href="#" data-i18n="footer-tg">
-                  Перейти в телеграм канал
+                <a class="footer__tg" href="#">
+                  <span data-i18n="footer-tg">Перейти в телеграм канал</span>
                   <svg
                     width="40"
                     height="40"
