main / fixed cards for desktop based on the layout

--- a/index.html
+++ b/index.html
@@ -90,20 +90,36 @@
               <div class="card" id="card-1">
                 <picture class="card__bg">
                   <source
+                    class="card__bg"
                     srcset="./assets/images/card-1-bg.webp"
                     type="image/webp"
                   />
                   <source
+                    class="card__bg"
                     srcset="./assets/images/card-1-bg.png"
                     type="image/png"
                   />
-                  <img src="./assets/images/card-1-bg.png" alt="Card-1" />
+                  <img
+                    class="card__bg"
+                    src="./assets/images/card-1-bg.png"
+                    alt="Card-1"
+                  />
                 </picture>
 
                 <picture class="card__image">
-                  <source srcset="./assets/images/card-1.webp" />
-                  <source srcset="./assets/images/card-1.png" />
-                  <img src="./assets/images/card-1.png" alt="Card-1.1" />
+                  <source
+                    class="card__image"
+                    srcset="./assets/images/card-1.webp"
+                  />
+                  <source
+                    class="card__image"
+                    srcset="./assets/images/card-1.png"
+                  />
+                  <img
+                    class="card__image"
+                    src="./assets/images/card-1.png"
+                    alt="Card-1.1"
+                  />
                 </picture>
 
                 <div class="card__header">
@@ -168,9 +184,9 @@
                 ></object>
 
                 <picture class="card__image">
-                  <source srcset="./assets/images/card-2.webp" />
-                  <source srcset="./assets/images/card-2.png" />
-                  <img src="./assets/images/card-2.png" alt="Card-2" />
+                  <source class="card__image"  srcset="./assets/images/card-2.webp" />
+                  <source class="card__image"  srcset="./assets/images/card-2.png" />
+                  <img class="card__image"  src="./assets/images/card-2.png" alt="Card-2" />
                 </picture>
 
                 <div class="card__header">
@@ -261,20 +277,26 @@
               <div class="card" id="card-3">
                 <picture class="card__bg">
                   <source
+                    class="card__bg"
                     srcset="./assets/images/card-3-bg.webp"
                     type="image/webp"
                   />
                   <source
+                    class="card__bg"
                     srcset="./assets/images/card-3-bg.png"
                     type="image/png"
                   />
-                  <img src="./assets/images/card-3-bg.png" alt="Card-3" />
+                  <img
+                    class="card__bg"
+                    src="./assets/images/card-3-bg.png"
+                    alt="Card-3"
+                  />
                 </picture>
 
                 <picture class="card__image">
-                  <source srcset="./assets/images/card-3.webp" />
-                  <source srcset="./assets/images/card-3.png" />
-                  <img src="./assets/images/card-3.png" alt="Card-3.1" />
+                  <source class="card__image"  srcset="./assets/images/card-3.webp" />
+                  <source class="card__image"  srcset="./assets/images/card-3.png" />
+                  <img class="card__image"  src="./assets/images/card-3.png" alt="Card-3.1" />
                 </picture>
 
                 <div class="card__header">
@@ -353,14 +375,20 @@
               <div class="card orange-card" id="card-4">
                 <picture class="card__bg">
                   <source
+                    class="card__bg"
                     srcset="./assets/images/card-4-bg.webp"
                     type="image/webp"
                   />
                   <source
+                    class="card__bg"
                     srcset="./assets/images/card-4-bg.png"
                     type="image/png"
                   />
-                  <img src="./assets/images/card-4-bg.png" alt="Card-4" />
+                  <img
+                    class="card__bg"
+                    src="./assets/images/card-4-bg.png"
+                    alt="Card-4"
+                  />
                 </picture>
 
                 <div class="card__header">
