--- a/index.html
+++ b/index.html
@@ -184,9 +184,19 @@
                 ></object>
 
                 <picture class="card__image">
-                  <source class="card__image"  srcset="./assets/images/card-2.webp" />
-                  <source class="card__image"  srcset="./assets/images/card-2.png" />
-                  <img class="card__image"  src="./assets/images/card-2.png" alt="Card-2" />
+                  <source
+                    class="card__image"
+                    srcset="./assets/images/card-2.webp"
+                  />
+                  <source
+                    class="card__image"
+                    srcset="./assets/images/card-2.png"
+                  />
+                  <img
+                    class="card__image"
+                    src="./assets/images/card-2.png"
+                    alt="Card-2"
+                  />
                 </picture>
 
                 <div class="card__header">
@@ -294,9 +304,19 @@
                 </picture>
 
                 <picture class="card__image">
-                  <source class="card__image"  srcset="./assets/images/card-3.webp" />
-                  <source class="card__image"  srcset="./assets/images/card-3.png" />
-                  <img class="card__image"  src="./assets/images/card-3.png" alt="Card-3.1" />
+                  <source
+                    class="card__image"
+                    srcset="./assets/images/card-3.webp"
+                  />
+                  <source
+                    class="card__image"
+                    srcset="./assets/images/card-3.png"
+                  />
+                  <img
+                    class="card__image"
+                    src="./assets/images/card-3.png"
+                    alt="Card-3.1"
+                  />
                 </picture>
 
                 <div class="card__header">
@@ -500,5 +520,7 @@
     <script src="./js/app.js"></script>
     <script src="./js/cards.js"></script>
     <script src="./js/languages.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="./js/animations.js"></script>
   </body>
 </html>
