--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                   </button>
                 </div>
               </div>
-              <div class="card orange-card" id="card-4">
+              <div class="card orange-card end" id="card-4">
                 <picture class="card__bg">
                   <source
                     class="card__bg"
@@ -521,6 +521,7 @@
     <script src="./js/cards.js"></script>
     <script src="./js/languages.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="./js/animations.js"></script>
   </body>
 </html>
